--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,8 @@ body {
   
   .saveBtn {
     border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    /* border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px; */
     background-color: #06aed5;
     color: white;
   }
@@ -72,3 +72,4 @@ body {
     transition: all 0.3s ease-in-out;
   }
   
+ 
