--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   
   textarea {
     background: transparent;
-    border: none;
+    border: solid 1px #000000;
     resize: none;
     color: #000000;
     border-left: 1px solid black;
